Fix reference links to break at smaller screen sizes

--- a/_sass/sections/06-data/_main.scss
+++ b/_sass/sections/06-data/_main.scss
@@ -137,5 +137,17 @@ td, th {
 }
 
 
+a {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
 
+  -ms-word-break: break-all;
+  word-break: break-word;
+
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+
+}
 }
